Fixed overflow issue and styled scrollbars

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -10,6 +10,25 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(0,0,0,0);
+  -webkit-border-radius: 100px;
+}
+::-webkit-scrollbar:hover { background-color: rgba(0, 0, 0, 0.09); }
+
+::-webkit-scrollbar-thumb:vertical {
+  background: rgba(0,0,0,0.5);
+  -webkit-border-radius: 100px;
+  background-clip: padding-box;
+  border: 2px solid rgba(0, 0, 0, 0);
+  min-height: 10px;
+}
+::-webkit-scrollbar-thumb:vertical:active {
+  background: rgba(0,0,0,0.61);
+  -webkit-border-radius: 100px;
+}
+
 h1, h2, h3 { margin: 0; }
 
 nav {
@@ -138,10 +157,10 @@ nav {
     position: fixed;
     top: 60px; right: 0px; bottom: 0px;
     background-color: #fff;
-    z-index: 500;
+    z-index: 1500;
     max-width: 50vw;
     width: 100%;
-    padding: 20px;
+    padding: 1.3em 1.3em 12.5em 1.3em;
     border-left: 1px solid #c3c3c3;
     -webkit-animation: slideIn .3s forwards;
     -moz-animation:    slideIn .3s forwards;
@@ -169,6 +188,7 @@ nav {
 
 .post-body {
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     height: 100%;
 }
 
